# iris-hardening-web

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  build-release.bat  start-test-server.sh  test-independent.sh  test-page.html
.github/workflows/: wasm-deploy.yml
client_site/assets/: index.html  init_iris.js
client_site/keys/: key.txt
crates/iris-gateway/: Cargo.toml  config.example.toml
crates/iris-gateway/src/: config.rs  crypto.rs  encrypt.rs  key_manager.rs  lib.rs  main.rs  path_transform.rs  proxy.rs  server.rs
crates/iris-secure-config/: Cargo.toml  config.example.toml
crates/iris-secure-config/src/: config.rs  database.rs  lib.rs  main.rs  nginx_gen.rs  routes.rs
crates/iris-secure-config/web/: index.html
crates/iris-secure-gateway/: Cargo.toml  README.md  config.example.toml  key.example.txt
crates/iris-secure-gateway/assets/: index.html  init_iris.js  iris-canvas.js
crates/iris-secure-gateway/src/: config.rs  config_poller.rs  crypto.rs  encrypt.rs  key_manager.rs  lib.rs  main.rs  path_transform.rs  proxy.rs  server.rs  wasm_generator.rs
crates/iris-wasm/: Cargo.toml  README.md  TESTS.md  build-wasm.bat  index.html  test-e2e.html
crates/iris-wasm-gateway/: Cargo.toml  README.md  cloudflare.example.toml  config.example.toml
crates/iris-wasm-gateway/src/: cli.rs  cloudflare.rs  config.rs  key_manager.rs  key_obfuscation.rs  lib.rs  main.rs  notify.rs  scheduler.rs  server.rs  wasm_generator.rs  wasm_proxy.rs
crates/iris-wasm/src/: lib.rs  text_renderer.rs
demo/: README.md  config.toml  index.html  key.txt
demo/api/: health.json  status.json  wasm
demo/assets/: index.html  iris-bootstrap.js  iris-sw.js
demo/assets/css/: style.css
demo/assets/js/: app.js
demo/keys/: metadata.json
docs/: COMPARISON_B_VS_C.md  CONFIG_SECURITY.md  GITHUB_ACTIONS_QUICKSTART.md  GITHUB_WORKFLOW_EVALUATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INDEPENDENT_TEST_PLAN.md  INDEPENDENT_TEST_STATUS.md  KEY_OBFUSCATION.md  LOCAL_TEST_REPORT.md  QUICKSTART.md  SCHEDULER.md  TDD-Iris-Hardening-Web-20260507.md  WORKFLOW_CONTROL.md
function_site/: key.txt
function_site/assets/: index.html  iris-bootstrap.js  iris-canvas.js
function_site/assets/js/: app.js
function_site/keys/: metadata.json
iris-demo/: config.toml
iris-demo-backup/: config.toml
iris-demo-backup/assets/css/: style.css
iris-demo/assets/: iris-sw.js
iris-demo/data/secret/: document.txt
keys/: key.txt  metadata.json
nginx/: iris_main.js  nginx.conf
