[workspace]
members = [
  "crates/iris-wasm",
  "crates/iris-secure-gateway",
  "crates/iris-wasm-gateway",
  "crates/iris-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"

[workspace.dependencies]
iris-wasm = { path = "crates/iris-wasm", version = "0.1.1" }
iris-secure-gateway = { path = "crates/iris-secure-gateway", version = "0.1.1" }
iris-wasm-gateway = { path = "crates/iris-wasm-gateway", version = "0.1.1" }
iris-gateway = { path = "crates/iris-gateway", version = "0.1.1" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
hex = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
