[package]
name = "iris-gateway"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris Gateway - Unified secure gateway with encryption, key management, and WASM distribution"

[dependencies]
tokio = { workspace = true }
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = "1"
aes-gcm = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
bytes = "1"
