[package]
name = "iris-secure-config"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"