[package]
name = "iris-secure-gateway"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris Secure Gateway - Encrypted file/API proxy with path transformation"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
reqwest = "0.11"
bytes = "1"
