[package]
name = "iris-secure-gateway"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris Secure Gateway - Encrypted file/API proxy with path transformation"

[dependencies]
tokio = { workspace = true }
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
regex = "1"
aes-gcm = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
rand = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
reqwest = { workspace = true }
bytes = "1"
uuid = { workspace = true }
chrono = { workspace = true }
