[package]
name = "iris-wasm-gateway"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris WASM Gateway - Distributes encrypted WASM proxy and manages key rotation"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iris-wasm-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
wasm-bindgen = "0.2.89"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Request",
    "Response",
    "Headers",
    "console",
] }
