[package]
name = "iris-wasm-gateway"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris WASM Gateway - Distributes encrypted WASM proxy and manages key rotation"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "iris-wasm-gateway"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
aes-gcm = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
rand = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = { workspace = true }
console_error_panic_hook = "0.1"
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "Headers",
    "console",
] }
