[package]
name = "iris-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris Engine WASM - WebAssembly binding for iris-engine with WebGL/WebGPU rendering"

[lib]
crate-type = ["cdylib"]

[dependencies]
iris-engine = { path = "../../../iris-repo/crates/iris-engine" }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "console",
    "Performance",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
