[package]
name = "iris-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Iris Team"]
license = "MIT"
repository = "https://github.com/itszzl-sudo/iris"
rust-version = "1.78"
description = "Iris Engine WASM - WebAssembly binding for iris-engine with WebGL/WebGPU rendering"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "console",
    "Performance",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
